--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,7 @@
 name: Generate Snake
 
 on:
-  schedule:
-    - cron: "0 0 * * *"   # corre todos los días a la medianoche
-  workflow_dispatch:       # permite correrlo manualmente
+  workflow_dispatch: # se puede ejecutar manualmente
 
 jobs:
   build:
@@ -17,12 +15,15 @@ jobs:
         with:
           github_user_name: RamirezThomasAlan
           outputs: |
-            dist/github-contribution-grid-snake.svg
+            github-contribution-grid-snake.svg
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
+      - name: Commit SVG
+        run: |
+          git config --global user.name "RamirezThomasAlan"
+          git config --global user.email "ramirezthomasalan@gmail.com"
+          git add github-contribution-grid-snake.svg
+          git commit -m "Update snake"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
